--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PRIDE.- Kendrick Lamar</title>
+    <style>
+        h1{
+            color:black
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>PRIDE. do álbum 'DAMN.'</h1>
+    <h2>DAMN. álbum lançado em 2017</h2>
 </body>
 </html>
