--- a/index.html
+++ b/index.html
@@ -6,12 +6,19 @@
     <title>PRIDE.- Kendrick Lamar</title>
     <style>
         h1{
-            color:black
+            color:black;
+            text-align:center;
+            font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            font-size:50pt;
         }
     </style>
 </head>
 <body>
     <h1>PRIDE. do álbum 'DAMN.'</h1>
     <h2>DAMN. álbum lançado em 2017</h2>
+    <p>"PRIDE." é a sétima faixa do álbum "DAMN.", lançado em 2017 por Kendrick Lamar. O álbum explora temas complexos como identidade, luta interna, e moralidade, e "PRIDE." se destaca por sua introspectiva e melancólica exploração do orgulho humano.
+    </p>
+    <p>
+        "PRIDE." foi produzida por Steve Lacy, Sounwave e Kendrick Lamar. Steve Lacy, conhecido por seu trabalho com o The Internet, trouxe uma sonoridade distinta e suave para a faixa, que se combina perfeitamente com os vocais introspectivos de Kendrick.</p>
 </body>
 </html>
