--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             font-size:50pt;
         }
+        h2{color:black}
     </style>
 </head>
 <body>
