--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
     </p>
     <p>
         "PRIDE." foi produzida por Steve Lacy, Sounwave e Kendrick Lamar. Steve Lacy, conhecido por seu trabalho com o The Internet, trouxe uma sonoridade distinta e suave para a faixa, que se combina perfeitamente com os vocais introspectivos de Kendrick.</p>
+        <p>A letra de "PRIDE." mergulha na dualidade do orgulho, mostrando como ele pode ser tanto uma virtude quanto uma fraqueza. Kendrick reflete sobre suas próprias falhas e tentações, reconhecendo que, embora aspire a ser uma pessoa melhor, muitas vezes é impedido por seu próprio orgulho.</p>
 </body>
 </html>
