--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
             font-size:50pt;
         }
         h2{color:black}
+        span{color:red;}
     </style>
 </head>
 <body>
     <h1>PRIDE. do álbum 'DAMN.'</h1>
-    <h2>DAMN. álbum lançado em 2017</h2>
+    <h2><span>DAMN.</span> álbum lançado em 2017</h2>
     <p>"PRIDE." é a sétima faixa do álbum "DAMN.", lançado em 2017 por Kendrick Lamar. O álbum explora temas complexos como identidade, luta interna, e moralidade, e "PRIDE." se destaca por sua introspectiva e melancólica exploração do orgulho humano.
     </p>
     <p>
