--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     <p>
         "PRIDE." foi produzida por Steve Lacy, Sounwave e Kendrick Lamar. Steve Lacy, conhecido por seu trabalho com o The Internet, trouxe uma sonoridade distinta e suave para a faixa, que se combina perfeitamente com os vocais introspectivos de Kendrick.</p>
         <p>A letra de "PRIDE." mergulha na dualidade do orgulho, mostrando como ele pode ser tanto uma virtude quanto uma fraqueza. Kendrick reflete sobre suas próprias falhas e tentações, reconhecendo que, embora aspire a ser uma pessoa melhor, muitas vezes é impedido por seu próprio orgulho.</p>
-        <p>Um trecho notável da música diz:
-
-           '' Love's gonna get you killed
-            But pride's gonna be the death of you and you and me
-            And you and you and you and me
-            And you and you and you and me
-            And you and you and you and me
-            And you and you...''
-            </p>
+        <p>Um trecho notável da música diz:</p>
+        <p>```
+            Love's gonna get you killed</p>
+            <p>But pride's gonna be the death of you and you and me</p>
+            <p>And you and you and you and me</p>
+            <p>And you and you and you and me</p>
+            <p>And you and you and you and me</p>
+            <p>And you and you...
+                ```</p>
 </body>
 </html>
