--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
             <p>And you and you and you and me</p>
             <p>And you and you...
                 ```</p>
+                <p>Essa repetição enfatiza a luta universal com o orgulho, mostrando que é uma batalha contínua e coletiva.</p>
 </body>
 </html>
