--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 <body>
     <h1>PRIDE. do álbum 'DAMN.'</h1>
+    <img src="img1.jpeg"
     <h2><span>DAMN.</span> álbum lançado em 2017</h2>
     <p>"PRIDE." é a sétima faixa do álbum "DAMN.", lançado em 2017 por Kendrick Lamar. O álbum explora temas complexos como identidade, luta interna, e moralidade, e "PRIDE." se destaca por sua introspectiva e melancólica exploração do orgulho humano.
     </p>
@@ -33,5 +34,6 @@
             <p>And you and you...
                 ```</p>
                 <p>Essa repetição enfatiza a luta universal com o orgulho, mostrando que é uma batalha contínua e coletiva.</p>
+                <p>Musicalidade:</P>
 </body>
 </html>
