--- a/index.html
+++ b/index.html
@@ -31,9 +31,14 @@
             <p>And you and you and you and me</p>
             <p>And you and you and you and me</p>
             <p>And you and you and you and me</p>
-            <p>And you and you...
-                ```</p>
-                <p>Essa repetição enfatiza a luta universal com o orgulho, mostrando que é uma batalha contínua e coletiva.</p>
-                <p>Musicalidade:</P>
+            <p>And you and you...```</p>
+                
+            
+        <p>Essa repetição enfatiza a luta universal com o orgulho, mostrando que é uma batalha contínua e coletiva.</p>
+         <p>Musicalidade:</P>
+
+        <P>Musicalmente, "PRIDE." é caracterizada por um ritmo lento e atmosférico, com uma linha de baixo suave e uma guitarra elétrica sutil. A produção minimalista coloca a ênfase nas letras e na entrega emocional de Kendrick. A canção cria uma sensação de contemplação e introspecção, refletindo perfeitamente o tema da música.</P>
+
+         <P>Conexão com o Álbum</P>
 </body>
 </html>
