--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
             font-size:50pt;
         }
         h2{color:black}
-        span{color:red;}
+        span{color:red;
+            font-size: 50pt;
+        }
+    
     </style>
 </head>
 <body>
@@ -39,6 +42,8 @@
 
         <P>Musicalmente, "PRIDE." é caracterizada por um ritmo lento e atmosférico, com uma linha de baixo suave e uma guitarra elétrica sutil. A produção minimalista coloca a ênfase nas letras e na entrega emocional de Kendrick. A canção cria uma sensação de contemplação e introspecção, refletindo perfeitamente o tema da música.</P>
 
-         <P>Conexão com o Álbum</P>
+         <P>Conexão com o Álbum:</P>
+
+         <p>No contexto do álbum "DAMN.", "PRIDE." é seguida por "HUMBLE.", criando uma dicotomia interessante entre as duas faixas. Enquanto "PRIDE." explora a luta interna com o ego e o orgulho, "HUMBLE." é uma chamada para a humildade e auto-reflexão. Essa sequência reforça a narrativa do álbum, que lida com a tensão entre a virtude e o vício.</p>
 </body>
 </html>
