--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@
         faixas. Enquanto "PRIDE." explora a luta interna com o ego e o orgulho, "HUMBLE." é uma chamada para a humildade
         e auto-reflexão. Essa sequência reforça a narrativa do álbum, que lida com a tensão entre a virtude e o vício.
     </p>
+
+    <P>Conclusão:</P>
+
+    <P>
+        "PRIDE." é uma faixa essencial para entender a profundidade e a complexidade do álbum "DAMN." de Kendrick Lamar. Sua exploração honesta e crua do orgulho humano ressoa profundamente com os ouvintes, fazendo-os refletir sobre suas próprias batalhas internas. Com uma produção impecável e letras poderosas, "PRIDE." se destaca como uma das músicas mais memoráveis e impactantes de Kendrick Lamar.
+        </P>
+
+        <P>Esse álbum foi escrito junto com Steve Lacy.</P>
 </body>
 
 </html>
