--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
             color: red;
             font-size: 30pt;
         }
+
+        img{
+            width: 780px;
+            height: 580px;
+        }
     </style>
 </head>
 
@@ -47,7 +52,7 @@
         <p>And you and you and you and me</p>
         <p>And you and you and you and me</p>
         <p>And you and you...```</p>
-    </span>
+        </span>
 
 
     <p>Essa repetição enfatiza a luta universal com o orgulho, mostrando que é uma batalha contínua e coletiva.</p>
