--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
         }
 
         img{
+            width: 300px;
+            height: 500px;
+        }
+
+        #img1{
             width: 500px;
             height: 700px;
         }
@@ -31,7 +36,7 @@
 
 <body>
     <h1>PRIDE. do álbum 'DAMN.'</h1>
-    <img src="img1.jpeg" <h2><span>DAMN.</span> álbum lançado em 2017</h2>
+    <img src="img1.jpeg" id="img1"><h2><span>DAMN.</span> álbum lançado em 2017</h2>
     <p>"PRIDE." é a sétima faixa do álbum "DAMN.", lançado em 2017 por Kendrick Lamar. O álbum explora temas complexos
         como identidade, luta interna, e moralidade, e "PRIDE." se destaca por sua introspectiva e melancólica
         exploração do orgulho humano.
