--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
     <P>
         "PRIDE." é uma faixa essencial para entender a profundidade e a complexidade do álbum "DAMN." de Kendrick Lamar. Sua exploração honesta e crua do orgulho humano ressoa profundamente com os ouvintes, fazendo-os refletir sobre suas próprias batalhas internas. Com uma produção impecável e letras poderosas, "PRIDE." se destaca como uma das músicas mais memoráveis e impactantes de Kendrick Lamar.
         </P>
-        
-<img src="img2.jpeg"
+    
+<P> <img src="img2.jpeg" </P>
 
 
 <P>Esse álbum foi escrito junto com Steve Lacy.</P>
